# partialize

./: Cargo.toml  README.md
src/: lib.rs  partial.rs  partial_clone.rs  partial_once.rs  prelude.rs
